[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Objects/UI/sword.png" type="Texture" id=1]
[ext_resource path="res://Source/Cutscenes/CutsceneButton.gd" type="Script" id=2]
[ext_resource path="res://Source/Fonts/Alkhemikal.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="TextureButton" type="TextureButton"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
arrow_margin_from_center = 100

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Text button [/center]"
text = " Text button "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="Sprite" parent="."]
position = Vector2( 220, 6.66666 )
texture = ExtResource( 1 )

[node name="RightArrow" type="Sprite" parent="."]
position = Vector2( 420, 6.66666 )
texture = ExtResource( 1 )
flip_h = true
[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
